Make library work for API 11 and above and provide basic list functionality on 10 and below instead of crashing

--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical"
     card_view:cardCornerRadius="5dp">
 
